fixed shifting bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,7 +259,7 @@ textarea#editNoteForm2{
   height: 160px;
   background: orange;
   margin: 5px;
-  position: relative;
+  position: absolute;
   word-wrap: break-word;
   border: 0.5px solid black;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.15);
